@@ -164,6 +164,7 @@ nobase_include_HEADERS = \
   aux_/disable_warnings_push.hpp    \
   aux_/disable_warnings_pop.hpp     \
   aux_/dev_random.hpp               \
+  aux_/deque.hpp                    \
   aux_/escape_string.hpp            \
   aux_/io.hpp                       \
   aux_/max_path.hpp                 \
