@@ -65,25 +65,27 @@ namespace libtorrent
 
 		// ``add()`` and ``remove()`` adds and removes a peer class to be added
 		// to new peers based on socket type.
-		void add(socket_type_t st, int peer_class)
+		void add(socket_type_t st, peer_class_t const peer_class)
 		{
-			TORRENT_ASSERT(peer_class >= 0);
-			TORRENT_ASSERT(peer_class < 32);
-			if (peer_class < 0 || peer_class > 31) return;
+			TORRENT_ASSERT(peer_class >= peer_class_t{0});
+			TORRENT_ASSERT(peer_class < peer_class_t{32});
+			if (peer_class < peer_class_t{0}
+				|| peer_class > peer_class_t{31}) return;
 
 			TORRENT_ASSERT(st < num_socket_types && st >= 0);
 			if (st < 0 || st >= num_socket_types) return;
-			m_peer_class_type[st] |= 1 << peer_class;
+			m_peer_class_type[st] |= 1 << static_cast<std::uint32_t>(peer_class);
 		}
-		void remove(socket_type_t st, int peer_class)
+		void remove(socket_type_t st, peer_class_t const peer_class)
 		{
-			TORRENT_ASSERT(peer_class >= 0);
-			TORRENT_ASSERT(peer_class < 32);
-			if (peer_class < 0 || peer_class > 31) return;
+			TORRENT_ASSERT(peer_class >= peer_class_t{0});
+			TORRENT_ASSERT(peer_class < peer_class_t{32});
+			if (peer_class < peer_class_t{0}
+				|| peer_class > peer_class_t{31}) return;
 
 			TORRENT_ASSERT(st < num_socket_types && st >= 0);
 			if (st < 0 || st >= num_socket_types) return;
-			m_peer_class_type[st] &= ~(1 << peer_class);
+			m_peer_class_type[st] &= ~(1 << static_cast<std::uint32_t>(peer_class));
 		}
 
 		// ``disallow()`` and ``allow()`` adds and removes a peer class to be
@@ -91,25 +93,27 @@ namespace libtorrent
 		//
 		// The ``peer_class`` argument cannot be greater than 31. The bitmasks representing
 		// peer classes in the ``peer_class_type_filter`` are 32 bits.
-		void disallow(socket_type_t st, int peer_class)
+		void disallow(socket_type_t st, peer_class_t const peer_class)
 		{
-			TORRENT_ASSERT(peer_class >= 0);
-			TORRENT_ASSERT(peer_class < 32);
-			if (peer_class < 0 || peer_class > 31) return;
+			TORRENT_ASSERT(peer_class >= peer_class_t{0});
+			TORRENT_ASSERT(peer_class < peer_class_t{32});
+			if (peer_class < peer_class_t{0}
+				|| peer_class > peer_class_t{31}) return;
 
 			TORRENT_ASSERT(st < num_socket_types && st >= 0);
 			if (st < 0 || st >= num_socket_types) return;
-			m_peer_class_type_mask[st] &= ~(1 << peer_class);
+			m_peer_class_type_mask[st] &= ~(1 << static_cast<std::uint32_t>(peer_class));
 		}
-		void allow(socket_type_t st, int peer_class)
+		void allow(socket_type_t st, peer_class_t const peer_class)
 		{
-			TORRENT_ASSERT(peer_class >= 0);
-			TORRENT_ASSERT(peer_class < 32);
-			if (peer_class < 0 || peer_class > 31) return;
+			TORRENT_ASSERT(peer_class >= peer_class_t{0});
+			TORRENT_ASSERT(peer_class < peer_class_t{32});
+			if (peer_class < peer_class_t{0}
+				|| peer_class > peer_class_t{31}) return;
 
 			TORRENT_ASSERT(st < num_socket_types && st >= 0);
 			if (st < 0 || st >= num_socket_types) return;
-			m_peer_class_type_mask[st] |= 1 << peer_class;
+			m_peer_class_type_mask[st] |= 1 << static_cast<std::uint32_t>(peer_class);
 		}
 
 		// takes a bitmask of peer classes and returns a new bitmask of
