@@ -94,8 +94,16 @@ namespace aux {
 		UnderlyingType m_val;
 	};
 
-	struct piece_index_tag {};
-	struct file_index_tag {};
+	// meta function to return the underlying type of a strong_typedef, or the
+	// type itself if it isn't a strong_typedef
+	template <typename T>
+	struct underlying_index_t { using type = T; };
+
+	template <typename U, typename Tag>
+	struct underlying_index_t<aux::strong_typedef<U, Tag>> { using type = U; };
+
+	struct piece_index_tag;
+	struct file_index_tag;
 
 	template <typename T, typename Tag>
 	std::string to_string(strong_typedef<T, Tag> const t)
