@@ -73,20 +73,19 @@ namespace libtorrent
 		priority[peer_connection::download_channel] = (std::max)(1, (std::min)(255, pci->download_priority));
 	}
 
-	peer_class_t peer_class_pool::new_peer_class(std::string const& label)
+	peer_class_t peer_class_pool::new_peer_class(std::string label)
 	{
-		peer_class_t ret = 0;
+		peer_class_t ret{0};
 		if (!m_free_list.empty())
 		{
 			ret = m_free_list.back();
 			m_free_list.pop_back();
-			m_peer_classes[ret] = peer_class(label);
+			m_peer_classes[ret] = peer_class(std::move(label));
 		}
 		else
 		{
-			TORRENT_ASSERT(m_peer_classes.size() < 0x100000000);
-			ret = peer_class_t(m_peer_classes.size());
-			m_peer_classes.push_back(peer_class(label));
+			ret = m_peer_classes.end_index();
+			m_peer_classes.emplace_back(std::move(label));
 		}
 
 		return ret;
@@ -94,7 +93,7 @@ namespace libtorrent
 
 	void peer_class_pool::decref(peer_class_t c)
 	{
-		TORRENT_ASSERT(c < m_peer_classes.size());
+		TORRENT_ASSERT(c < m_peer_classes.end_index());
 		TORRENT_ASSERT(m_peer_classes[c].in_use);
 		TORRENT_ASSERT(m_peer_classes[c].references > 0);
 
@@ -106,7 +105,7 @@ namespace libtorrent
 
 	void peer_class_pool::incref(peer_class_t c)
 	{
-		TORRENT_ASSERT(c < m_peer_classes.size());
+		TORRENT_ASSERT(c < m_peer_classes.end_index());
 		TORRENT_ASSERT(m_peer_classes[c].in_use);
 
 		++m_peer_classes[c].references;
@@ -114,13 +113,13 @@ namespace libtorrent
 
 	peer_class* peer_class_pool::at(peer_class_t c)
 	{
-		if (c >= m_peer_classes.size() || !m_peer_classes[c].in_use) return nullptr;
+		if (c >= m_peer_classes.end_index() || !m_peer_classes[c].in_use) return nullptr;
 		return &m_peer_classes[c];
 	}
 
 	peer_class const* peer_class_pool::at(peer_class_t c) const
 	{
-		if (c >= m_peer_classes.size() || !m_peer_classes[c].in_use) return nullptr;
+		if (c >= m_peer_classes.end_index() || !m_peer_classes[c].in_use) return nullptr;
 		return &m_peer_classes[c];
 	}
 }
